Use same bio across pages
Also remove the tagline about 'writing about tech, leadership and tech leadership', I like it, but it doesn't look good on the page!

--- a/jfdi.html
+++ b/jfdi.html
@@ -4,6 +4,7 @@
 {% include header.html page_name=" : JFDI" %}
 
 <div class="left-column">
+    {% include bio_sidebar.html %}
     {% include posts_list.html %}
 </div>
 
