--- a/speaking.html
+++ b/speaking.html
@@ -2,8 +2,6 @@
 ---
 {% include header.html page_name=" : Speaking" %}
 
-
-
 <div class="right-column">
 <h2>Recent talks</h2>
 <h1><a href="https://leaddev.com/technical-direction-strategy/difficult-teenage-years-setting-your-tech-strategy-after-launch">The difficult teenage years: setting your tech strategy after the launch</a></h1>
@@ -123,11 +121,8 @@ in 2009 at XPDay, one of the main pro-Agile conferences, and it was very popular
 
 </div>
 <div class="left-column">
-<h2>About me</h2>
-    <p>I am a technical director and software developer living and working in London.</p>
-    <p>I am Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
-    <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
-<p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
+
+{% include bio_sidebar.html %}
 
 </div>
 
