--- a/jfdi.html
+++ b/jfdi.html
@@ -14,6 +14,14 @@
     <div id="{{ post.anchor_id }}" class="blog-post">
       <h1><a href="{{post.url}}">{{ post.title}}</a></h1>
       <date>{{ post.date | date_to_long_string }}</date>
+    {% if post %}
+      {% assign tags = post.tags %}
+    {% else %}
+      {% assign tags = page.tags %}
+    {% endif %}
+    {% for tag in tags %}
+      / <a href="{{site.baseurl}}/tags.html#{{tag|slugize}}">{{tag}}</a>
+    {% endfor %}
         {{ post.content }}
     </div>
   {% endfor %}
