Add Software Architecture Hour to speaking page

--- a/speaking.html
+++ b/speaking.html
@@ -4,6 +4,9 @@
 
 <div class="right-column">
 <h1>Conference talks</h1>
+<h2><a href="https://learning.oreilly.com/videos/software-architecture-hour/0636920937104/0636920937104-video345687/">Software Architecture Hour: Technical Strategy with Anna Shipman</a></h2>
+<date>4th May 2023</date> <span class="conference-name">Software Architecture Hour with Neal Ford</span>
+<p>A discussion with Neal Ford on technical strategy; what it is, how to create it and how to get buy-in. <a href="https://learning.oreilly.com/videos/software-architecture-hour/0636920937104/0636920937104-video345687/">Watch here if you have an O'Reilly account</a>.</p>
 <h2><a href="https://leaddev.com/technical-direction-strategy/difficult-teenage-years-setting-your-tech-strategy-after-launch">The difficult teenage years: setting your tech strategy after the launch</a></h2>
 <date>10th June 2022</date> <span class="conference-name">LeadingEng London</span>
 <p>How to create a strategy, with examples from how we created the FT.com tech strategy after the launch, delivered at <a href="https://leaddev.com/technical-direction-strategy/difficult-teenage-years-setting-your-tech-strategy-after-launch">LeadingEng London</a>. Slides are in my <a href="/jfdi/difficult-teenage-years-leadeng.html">write-up</a>.</p>
