--- a/speaking.html
+++ b/speaking.html
@@ -16,9 +16,9 @@
 <h2><a href="https://qconlondon.com/london2022/presentation/no-next-next-fighting-entropy-microservices-architecture">No Next Next: Fighting Entropy in Your Microservices Architecture</a></h2>
 <date>6th April 2022</date> <span class="conference-name">QCon London</span>
 <p>How to avoid entropy in your microservices architecture, delivered at <a href="https://qconlondon.com/london2022/presentation/no-next-next-fighting-entropy-microservices-architecture">QCon London</a>. Slides and video are in my <a href="/jfdi/fighting-entropy-qcon.html">write-up</a>.</p>
-<h2><a href="https://events.leaddev.com/2022-S3-articulating-strategy">The good, the bad and the tech strategy</a></h2>
+<h2>The good, the bad and the tech strategy</h2>
 <date>15th February 2022</date> <span class="conference-name">LeadDev Together</span>
-<p>What strategy is, what good strategy looks like and what a good tech strategy is at <a href="https://events.leaddev.com/2022-S3-articulating-strategy">LeadDev Together</a>. Slides are in my <a href="/jfdi/good-bad-tech-strategy.html">write-up</a>.</p>
+<p>What strategy is, what good strategy looks like and what a good tech strategy is at <a href="https://events.leaddev.com/together">LeadDev Together</a>. Slides are in my <a href="/jfdi/good-bad-tech-strategy.html">write-up</a>.</p>
 <h2><a href="https://leaddev.com/technical-direction-strategy/creating-defining-and-refining-effective-tech-strategy">Creating, defining and refining an effective tech strategy</a></h2>
 <date>21st January 2021</date> <span class="conference-name">LeadDev Live</span>
 <p>I faciliated a panel on tech strategy at <a href="https://leaddev.com/course/leaddev-live">LeadDev Live</a>. I've done a <a href="/jfdi/tech-strategy-panel.html">write up, with a link to the video</a>.</p>
