--- a/jfdi.html
+++ b/jfdi.html
@@ -10,7 +10,7 @@
 
 <div class="right-column">
 
-  {% for post in site.posts %}
+  {% for post in site.posts limit: 4 %}
     <div id="{{ post.anchor_id }}" class="blog-post">
       <h1><a href="{{post.url}}">{{ post.title}}</a></h1>
       <date>{{ post.date | date_to_long_string }}</date>
