Add count for each tag

--- a/archive.html
+++ b/archive.html
@@ -16,7 +16,7 @@
 
 {% for tag in site.tags %}
   {% if tag[0] != "Technology" and tag[0] != "Leadership" and tag[0] != "Strategy" %}
-    <a href="#{{tag[0]|slugize}}">{{tag[0]}}</a> /
+    <a href="#{{tag[0]|slugize}}">{{tag[0]}}</a> ({{tag[0]|size}}) /
   {% endif %}
 {% endfor %}
 
