Link to archive

--- a/jfdi.html
+++ b/jfdi.html
@@ -25,7 +25,7 @@
         {{ post.content }}
     </div>
   {% endfor %}
-
+<h3>For more posts, see the <a href="/archive.html">archive</a>.</h3>
 </div>
 
 {% include footer.html %}
