--- a/archive.html
+++ b/archive.html
@@ -12,29 +12,7 @@
 
 <h2>Browse by category</h2>
 
-{% for tag in site.tags %}
-  {% if tag[0] == "Technology" %}
-    <a href="/tags/html#{{tag[0]|slugize}}">{{tag[0]}}</a> ({{tag[0]|size}}) /
-  {% endif %}
-{% endfor %}
-
-{% for tag in site.tags %}
-  {% if tag[0] == "Leadership" %}
-    <a href="/tags/html#{{tag[0]|slugize}}">{{tag[0]}}</a> ({{tag[0]|size}}) /
-  {% endif %}
-{% endfor %}
-
-{% for tag in site.tags %}
-  {% if tag[0] == "Strategy" %}
-    <a href="/tags/html#{{tag[0]|slugize}}">{{tag[0]}}</a> ({{tag[0]|size}}) /
-  {% endif %}
-{% endfor %}
-
-{% for tag in site.tags %}
-  {% if tag[0] != "Technology" and tag[0] != "Leadership" and tag[0] != "Strategy" %}
-    <a href="/tags/html#{{tag[0]|slugize}}">{{tag[0]}}</a> ({{tag[0]|size}}) /
-  {% endif %}
-{% endfor %}
+    {% include tags_list.html %}
 
 <h2>Browse by date</h2>
 
