--- a/tags.html
+++ b/tags.html
@@ -13,13 +13,7 @@
 <div class="right-column">
 <h2>Tags</h2>
 
-<a href="#Technology">Technology</a> / <a href="#Leadership">Leadership</a> / <a href="#Strategy">Strategy</a> /
-
-{% for tag in site.tags %}
-  {% if tag[0] != "Technology" and tag[0] != "Leadership" and tag[0] != "Strategy" %}
-    <a href="#{{tag[0]|slugize}}">{{tag[0]}}</a> /
-  {% endif %}
-{% endfor %}
+    {% include tags_list.html %}
 
 {% for tag in site.tags %}
   <h3><a id="{{ tag[0]}}">{{ tag[0] }}</a></h3>
