--- a/archive.html
+++ b/archive.html
@@ -32,7 +32,7 @@
         <ul>
         {% endif %}
         <div id="{{ post.anchor_id }}">
-          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+          {% include post_for_list.html %}
         </div>
         {% if forloop.last %}
         </ul>
