--- a/tags.html
+++ b/tags.html
@@ -20,7 +20,7 @@
     <h3><a id="{{ tag[0]}}">{{ tag[0] }}</a></h3>
       <ul>
         {% for post in tag[1] %}
-          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+          {% include post_for_list.html %}
         {% endfor %}
       </ul>
   {% endfor %}
