--- a/tags.html
+++ b/tags.html
@@ -2,14 +2,6 @@
 ---
 {% include header.html page_name=" : Tags" %}
 
-<div class="left-column">
-
-    <p>I am a technical director and software developer living and working in London.</p>
-    <p>I am Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
-    <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
-<p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
-</div>
-
 <div class="right-column">
 <h2>Tags</h2>
 
@@ -26,3 +18,13 @@
   {% endfor %}
   </div>
 </div>
+
+<div class="left-column">
+
+    <p>I am a technical director and software developer living and working in London.</p>
+    <p>I am Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
+    <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
+<p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
+</div>
+
+{% include footer.html %}
