Add link back to archive in tags page
Not the greatest design but at least it's out there so you don't get stuck on the tags page.

--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,11 @@
 {% include header.html page_name=" : Tags" %}
 
 <div class="right-column">
-<h2>Tags</h2>
+<h2>Browse by date</h2>
+
+All posts by date in the <a href="/archive.html">archive</a>.
+
+<h2>Browse by tag</h2>
 
     {% include tags_list.html %}
 
