--- a/speaking.html
+++ b/speaking.html
@@ -9,7 +9,7 @@
 <p>Tools, techniques and actionable advice to help you create and deliver an effective strategy. <a href="https://www.slideshare.net/annashipman/analysing-deciding-doing-how-to-develop-and-execute-an-effective-strategy">Slides here</a>.</p>
 <h2><a href="https://conference.ctocraft.com/london-2023/event/keynote-presentation-devex-what-actually-drives-productivity/">Keynote Fireside Chat: Strategic Technology Leadership</a></h2>
 <date>24th May 2023</date> <span class="conference-name">CTO Craft Con</span>
-<p>A fireside chat with Emma Hopkinson-Spark about building and executing strategy. <a href="/jfdi/strategy-fireside-chat.html">Write-up here</a>.</p>
+<p>A fireside chat with Emma Hopkinson-Spark about building and executing strategy. You can watch the <a href="/jfdi/strategy-fireside-video.html">video</a> and read a <a href="/jfdi/strategy-fireside-chat.html">write-up</a>.</p>
 <h2><a href="https://learning.oreilly.com/videos/software-architecture-hour/0636920937104/0636920937104-video345687/">Software Architecture Hour: Technical Strategy with Anna Shipman</a></h2>
 <date>4th May 2023</date> <span class="conference-name">Software Architecture Hour with Neal Ford</span>
 <p>A discussion with Neal Ford on technical strategy; what it is, how to create it and how to get buy-in. <a href="https://learning.oreilly.com/videos/software-architecture-hour/0636920937104/0636920937104-video345687/">Watch here if you have an O'Reilly account</a>.</p>
