--- a/speaking.html
+++ b/speaking.html
@@ -4,7 +4,7 @@
 
 <div class="right-column">
 <h1>Conference talks</h1>
-<h2><a href="https://turingfest.com/speaker/anna-shipman/">Analysing, Deciding, Doing: How to develop and execute an effective strategy</a></h2>
+<h2><a href="/jfdi/analysing-deciding-doing.html">Analysing, Deciding, Doing: How to develop and execute an effective strategy</a></h2>
 <date>28th June 2023</date> <span class="conference-name">Turing Fest</span>
 <p>Tools, techniques and actionable advice to help you create and deliver an effective strategy. Slides and video in my <a href="/jfdi/analysing-deciding-doing.html">write up</a>.</p>
 <h2><a href="https://conference.ctocraft.com/london-2023/event/keynote-presentation-devex-what-actually-drives-productivity/">Keynote Fireside Chat: Strategic Technology Leadership</a></h2>
