Made a start on swapping out some other people

--- a/_posts/2013-09-09-creating-a-puppet-module.html
+++ b/_posts/2013-09-09-creating-a-puppet-module.html
@@ -5,7 +5,7 @@ tag: Technology
 layout: blog_post
 ---
 <p>I learnt three very interesting things recently, courtesy of the brilliant <a
-href="https://twitter.com/dancarley" target="_blank">Dan Carley</a>.<p>
+href="https://dan.carley.co/" target="_blank">Dan Carley</a>.<p>
 <ol>
 <li><a href="#git-filter-branch">git filter-branch</a></li>
 <li><a href="#generate-module">how to create a puppet module using our puppet module skeleton</a></li>
