Managing managers podcast

--- a/speaking.html
+++ b/speaking.html
@@ -3,7 +3,10 @@
 {% include header.html page_name=" : Speaking" %}
 
 <div class="right-column">
-<h1>Conference talks</h1>
+<h1>Conference talks & podcasts</h1>
+<h2><a href="/jfdi/managing-managers-podcast.html">Managing Managers podcast: Splitting time and tech strategy</a></h2>
+<date>11th May 2024</date> <span class="conference-name">Managing Managers podcast</span>
+<p>I joined Pat Kua on his podcast to talk about strategy vs tactics, how to manage your time as an engineering leader and about my role at Kooth. <a href="/jfdi/managing-managers-podcast.html">Write up</a>.</p>
 <h2><a href="/jfdi/analysing-deciding-doing.html">Analysing, Deciding, Doing: How to develop and execute an effective strategy</a></h2>
 <date>28th June 2023</date> <span class="conference-name">Turing Fest</span>
 <p>Tools, techniques and actionable advice to help you create and deliver an effective strategy. Slides and video in my <a href="/jfdi/analysing-deciding-doing.html">write up</a>.</p>
