Add refactoring podcast to site

--- a/speaking.html
+++ b/speaking.html
@@ -4,6 +4,9 @@
 
 <div class="right-column">
 <h1>Conference talks & podcasts</h1>
+<h2><a href="/jfdi/refactoring-podcast.html">Refactoring podcast: Good tech strategy bad tech strategy</a></h2>
+<date>21st June 2024</date> <span class="conference-name">Refactoring podcast</span>
+<p>I joined Luca Rossi on his podcast to talk about strategy, leadership and my own journey in tech. <a href="/jfdi/refactoring-podcast.html">Write up</a>.</p>
 <h2><a href="/jfdi/managing-managers-podcast.html">Managing Managers podcast: Splitting time and tech strategy</a></h2>
 <date>11th May 2024</date> <span class="conference-name">Managing Managers podcast</span>
 <p>I joined Pat Kua on his podcast to talk about strategy vs tactics, how to manage your time as an engineering leader and about my role at Kooth. <a href="/jfdi/managing-managers-podcast.html">Write up</a>.</p>
