Add brief write-up of panel

--- a/speaking.html
+++ b/speaking.html
@@ -4,6 +4,9 @@
 
 <div class="right-column">
 <h1>Conference talks & podcasts</h1>
+<h2><a href="/jfdi/ai-blessing-bandwagon.html">AI in SaaS: Blessing or Bandwagon?</a></h2>
+<date>12th September 2024</date> <span class="conference-name">The SaaS CTO Conference</span>
+<p>I joined Mal Minhas and Chris Evans on a very interesting panel hosted by Jon Topper to talk about AI in SaaS; blessing or bandwagon? <a href="/jfdi/ai-blessing-bandwagon.html">Write up</a>.</p>
 <h2><a href="/jfdi/refactoring-podcast.html">Refactoring podcast: Good tech strategy bad tech strategy</a></h2>
 <date>21st June 2024</date> <span class="conference-name">Refactoring podcast</span>
 <p>I joined Luca Rossi on his podcast to talk about strategy, leadership and my own journey in tech. <a href="/jfdi/refactoring-podcast.html">Write up</a>.</p>
