Updating more twitter handles and links

--- a/_posts/2012-02-14-would-have-been-useful-to-know-at-my-first-game-jam.html
+++ b/_posts/2012-02-14-would-have-been-useful-to-know-at-my-first-game-jam.html
@@ -20,7 +20,7 @@ layout: blog_post
 
 <h3>A Note on Writing Your Own Game Engine</h3>
 
-<p>I didn't understand at the time why my <a href="http://globalgamejam.org/2011/flocks-sake" target="_blank">second game jam</a> was so much harder than my <a href="http://globalgamejam.org/2010/bacterial-warfare" target="_blank">first</a>, but when I explained what we did to the brilliant <a href="https://twitter.com/joehalliwell" target="_blank">Joe Halliwell</a> afterwards, it all became clear. We disobeyed the advice. We wrote our own game engine.</p>
+<p>I didn't understand at the time why my <a href="http://globalgamejam.org/2011/flocks-sake" target="_blank">second game jam</a> was so much harder than my <a href="http://globalgamejam.org/2010/bacterial-warfare" target="_blank">first</a>, but when I explained what we did to the brilliant <a href="https://mastodon.social/@joehalliwell" target="_blank">Joe Halliwell</a> afterwards, it all became clear. We disobeyed the advice. We wrote our own game engine.</p>
 
 <p>To be precise, we used <a href="http://www.opengl.org/about/" target="_blank">OpenGL</a>, which is a 2D/3D Graphics API written in C. It gives the instructions to the graphics card – you definitely don't want to be doing that yourself – at least not in a 48-hour game jam. The code was written in Python, and for the binding we used <a href="http://pyopengl.sourceforge.net/" target="_blank">PyOpenGL</a>. For the physics we used <a href="http://box2d.org/" target="_blank">Box2D</a>. OK, so we didn't exactly write our own game engine from scratch, but we assembled one from various constituent parts.</p>
 
@@ -40,7 +40,7 @@ layout: blog_post
 
 <p>There's an extremely detailed article on the differences <a href="http://www.1stwebdesigner.com/design/pixel-vector-graphics-difference/" target="_blank">here</a> but in very brief summary – technically speaking, pixel (aka bitmap, raster) art is basically dot-matrix, i.e. made up of pixels individually coloured, and vector art is created using mathematical functions and is basically points and the lines joining them. The art for your game may be either, or some combination of the two. A brief rule of thumb is that old games tend to use pixel art, but the choice is up to you – different tools for different times.</p>
 
-<p>However, it's more than just the technical differences, and the conversations you hear about pixel vs vector art will probably reflect something other than the strict technical distinction. <a href="https://twitter.com/doches" target="_blank">Trevor</a> summed it up for me very clearly, so here is an edited version of what he said:</p>
+<p>However, it's more than just the technical differences, and the conversations you hear about pixel vs vector art will probably reflect something other than the strict technical distinction. <a href="https://www.linkedin.com/in/trevorfountain/" target="_blank">Trevor</a> summed it up for me very clearly, so here is an edited version of what he said:</p>
 
 <p>"To me, pixel art is more of an aesthetic choice than a technical term. It's true that older games had a pixel art aesthetic, especially on 8- or
 16-bit platforms. Today, though, I think people use the terms 'pixel art' and 'retro' more or less interchangeably – games like <a href="http://www.canabalt.com" target="_blank">Canabalt</a> or <a href="http://shauninman.com/lastrocket/" target="_blank">The Last Rocket</a> are undeniably retro, and use the pixel art style to great effect. Games like <a href="http://chrome.angrybirds.com/" target="_blank">Angry Birds</a> are rendered using the same technology (2d sprites), yet no one would ever say that Angry Birds qualified as pixel art.</p>
@@ -48,6 +48,6 @@ layout: blog_post
 
 <h2>Next steps</h2>
 
-<p><a href="http://v21.posterous.com/how-to-make-your-first-videogame" target="_blank">How to Make Your First Videogame</a> by the excellent <a href="https://twitter.com/v21" target="_blank">v21</a> is great, and the short video <a href="http://youcanmakevideogames.com/" target="_blank">You Can Make Video Games</a> is fab and really worth watching. Or why not just sign up to the <a href="http://globalgamejam.org/" target="_blank">next Global Game Jam</a>?</p>
+<p><a href="http://v21.posterous.com/how-to-make-your-first-videogame" target="_blank">How to Make Your First Videogame</a> by the excellent <a href="https://merveilles.town/@v" target="_blank">v21</a> is great, and the short video <a href="http://youcanmakevideogames.com/" target="_blank">You Can Make Video Games</a> is fab and really worth watching. Or why not just sign up to the <a href="http://globalgamejam.org/" target="_blank">next Global Game Jam</a>?</p>
 
 <p>Enjoy!</p>
