--- a/_posts/2012-04-29-the-cap-theorem-and-mongodb.html
+++ b/_posts/2012-04-29-the-cap-theorem-and-mongodb.html
@@ -6,7 +6,7 @@ layout: blog_post
 ---
 <p>This week I learned some things about MongoDB. One of them was about how it fits in with the CAP theorem.</p>
 
-<p>They say a picture is worth a thousand words, and I think this diagram from my excellent new colleague <a href="https://twitter.com/matwall" target="_blank">Mat Wall</a> while he was explaining it to me says everything:</p>
+<p>They say a picture is worth a thousand words, and I think this diagram from my excellent new colleague <a href="https://www.linkedin.com/in/mat-wall-1b07321/" target="_blank">Mat Wall</a> while he was explaining it to me says everything:</p>
 <img src="/img/mongodb.jpg" />
 <p>Over and out.</p>
 <p>OK, perhaps I can offer a tiny bit of exposition.</p>
