Update speaking page
- Add CTO Craft conf talk
- Link panel write-up to the one with video

--- a/speaking.html
+++ b/speaking.html
@@ -4,9 +4,12 @@
 
 <div class="right-column">
 <h1>Conference talks & podcasts</h1>
+<h2><a href="https://conference.ctocraft.com/london-2025/agenda-preview/#day2">People, Process, Technology, Business</a></h2>
+<date>11th March 2025</date> <span class="conference-name">CTO Craft Conference</span/jfdi/saas-cto-panel.html>
+<p>There isn’t only one way to be a great technical leader. To be a great technical leader you need to play to your strengths. This shows you how to use the People, Process, Technology framework to identify your strengths and explains how using your strengths is best way to do your best work. <a href="https://www.slideshare.net/slideshow/people-process-technology-business/276551320">Slides on slideshare</a>, write-up to follow.</p>
 <h2><a href="/jfdi/ai-blessing-bandwagon.html">AI in SaaS: Blessing or Bandwagon?</a></h2>
 <date>12th September 2024</date> <span class="conference-name">The SaaS CTO Conference</span>
-<p>I joined Mal Minhas and Chris Evans on a very interesting panel hosted by Jon Topper to talk about AI in SaaS; blessing or bandwagon? <a href="/jfdi/ai-blessing-bandwagon.html">Write up</a>.</p>
+<p>I joined Mal Minhas and Chris Evans on a very interesting panel hosted by Jon Topper to talk about AI in SaaS; blessing or bandwagon? <a href="/jfdi/saas-cto-panel.html">Write up</a>.</p>
 <h2><a href="/jfdi/refactoring-podcast.html">Refactoring podcast: Good tech strategy bad tech strategy</a></h2>
 <date>21st June 2024</date> <span class="conference-name">Refactoring podcast</span>
 <p>I joined Luca Rossi on his podcast to talk about strategy, leadership and my own journey in tech. <a href="/jfdi/refactoring-podcast.html">Write up</a>.</p>
