--- a/speaking.html
+++ b/speaking.html
@@ -7,12 +7,12 @@
 <h2><a href="https://conference.ctocraft.com/london-2025/agenda-preview/#day2">People, Process, Technology, Business</a></h2>
 <date>11th March 2025</date> <span class="conference-name">CTO Craft Conference</span/jfdi/saas-cto-panel.html>
 <p>There isn’t only one way to be a great technical leader. To be a great technical leader you need to play to your strengths. This shows you how to use the People, Process, Technology framework to identify your strengths and explains how using your strengths is best way to do your best work. <a href="https://www.slideshare.net/slideshow/people-process-technology-business/276551320">Slides on slideshare</a>, write-up to follow.</p>
-<h2><a href="/jfdi/ai-blessing-bandwagon.html">AI in SaaS: Blessing or Bandwagon?</a></h2>
+<h2><a href="/jfdi/saas-cto-panel.html">AI in SaaS: Blessing or Bandwagon?</a></h2>
 <date>12th September 2024</date> <span class="conference-name">The SaaS CTO Conference</span>
-<p>I joined Mal Minhas and Chris Evans on a very interesting panel hosted by Jon Topper to talk about AI in SaaS; blessing or bandwagon? <a href="/jfdi/saas-cto-panel.html">Write up</a>.</p>
+<p>I joined Mal Minhas and Chris Evans on a very interesting panel hosted by Jon Topper to talk about AI in SaaS; blessing or bandwagon? Video of the panel is in my <a href="/jfdi/saas-cto-panel.html">write up</a>.</p>
 <h2><a href="/jfdi/refactoring-podcast.html">Refactoring podcast: Good tech strategy bad tech strategy</a></h2>
 <date>21st June 2024</date> <span class="conference-name">Refactoring podcast</span>
-<p>I joined Luca Rossi on his podcast to talk about strategy, leadership and my own journey in tech. <a href="/jfdi/refactoring-podcast.html">Write up</a>.</p>
+<p>I joined Luca Rossi on his podcast to talk about strategy, leadership and my own journey in tech. You can watch the epside in my <a href="/jfdi/refactoring-podcast.html">write up</a>.</p>
 <h2><a href="/jfdi/managing-managers-podcast.html">Managing Managers podcast: Splitting time and tech strategy</a></h2>
 <date>11th May 2024</date> <span class="conference-name">Managing Managers podcast</span>
 <p>I joined Pat Kua on his podcast to talk about strategy vs tactics, how to manage your time as an engineering leader and about my role at Kooth. <a href="/jfdi/managing-managers-podcast.html">Write up</a>.</p>
@@ -95,16 +95,14 @@ for government.</p>
 YouTube</a> and the <a
 href="http://www.slideshare.net/annashipman/a-paas-for-government">slides are here</a>.</p>
 <h2><a
-href="https://ucisa.mediasite.com/mediasite/Play/fac6d59c22664589a74d62bf4ec64d4e1d?catalog=df689fa652624fb08419197ae3afcc852 ">Digital
+href="https://www.youtube.com/watch?v=OEKDw9_MW4s">Digital
 infrastructure for the government</a></h2>
 <date>30 September 2015</date> <span class="conference-name">UCISA</span>
 <p>I delivered a talk at <a
 href="https://www.ucisa.ac.uk/">UCISA</a>,
 the conference for the Universities and Colleges Information Systems Association
 about the work I've been leading on investigating a
-PaaS for government. There is a video which you can find on <a
-href="https://ucisa.mediasite.com/mediasite/Play/fac6d59c22664589a74d62bf4ec64d4e1d?catalog=df689fa652624fb08419197ae3afcc8521">this
-page</a> (you may have to register).</p>
+PaaS for government. <a href="https://www.youtube.com/watch?v=OEKDw9_MW4s">Video is here.</a></p>
 <h2><a href="http://www.infoq.com/presentations/gov-uk-devops">Delivering GOV.UK: DevOps for the nation</a></h2>
 <date>04 March 2015</date> <span class="conference-name">QCon London</span>
 <p>My QCon talk on how we do DevOps on <a href="https://www.gov.uk">GOV.UK</a>.
