--- a/speaking.html
+++ b/speaking.html
@@ -4,9 +4,9 @@
 
 <div class="right-column">
 <h1>Conference talks & podcasts</h1>
-<h2><a href="https://conference.ctocraft.com/london-2025/agenda-preview/#day2">People, Process, Technology, Business</a></h2>
+<h2><a href="/jfdi/people-process-tech-business.html">People, Process, Technology, Business</a></h2>
 <date>11th March 2025</date> <span class="conference-name">CTO Craft Conference</span/jfdi/saas-cto-panel.html>
-<p>There isn’t only one way to be a great technical leader. To be a great technical leader you need to play to your strengths. This shows you how to use the People, Process, Technology framework to identify your strengths and explains how using your strengths is best way to do your best work. <a href="https://www.slideshare.net/slideshow/people-process-technology-business/276551320">Slides on slideshare</a>, write-up to follow.</p>
+<p>There isn’t only one way to be a great technical leader. To be a great technical leader you need to play to your strengths. This shows you how to use the People, Process, Technology framework to identify your strengths and explains how using your strengths is best way to do your best work. Video and slides in my <a href="/jfdi/people-process-tech-business.html">write-up</a>.</p>
 <h2><a href="/jfdi/saas-cto-panel.html">AI in SaaS: Blessing or Bandwagon?</a></h2>
 <date>12th September 2024</date> <span class="conference-name">The SaaS CTO Conference</span>
 <p>I joined Mal Minhas and Chris Evans on a very interesting panel hosted by Jon Topper to talk about AI in SaaS; blessing or bandwagon? Video of the panel is in my <a href="/jfdi/saas-cto-panel.html">write up</a>.</p>
